# dapps-escrow

./: .metahash  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  meta.txt
.github/workflows/: build.yml  release.yml
frontend/: package-lock.json  package.json
frontend/src/hooks/: api.ts  wallet.ts
frontend/src/pages/home/: Home.tsx
io/: Cargo.toml
io/src/: lib.rs
meta-io/: Cargo.toml
meta-io/src/: lib.rs
src/: contract.rs  lib.rs
state/: Cargo.toml
state/src/: lib.rs
tests/: cancel.rs  confirm.rs  deposit.rs  node_test.rs  other.rs  refund.rs
tests/utils/: check.rs  fail.rs  mod.rs
