[package]
name = "escrow"
version = "0.1.2"
edition = "2021"
license = "MIT"
authors = ["Gear Technologies"]

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "stable" }
codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false }
primitive-types = { version = "0.12.1", default-features = false, features = ["scale-info"] }
scale-info = { version = "2.3.1", default-features = false }
ft-main-io = { git = "https://github.com/gear-dapps/sharded-fungible-token.git", tag = "0.1.2" }
ft-logic-io = { git = "https://github.com/gear-dapps/sharded-fungible-token.git", tag = "0.1.2" }
async-trait = "0.1.60"
escrow-io = { path = "io" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", branch = "master" }
escrow-io = { path = "io" }

[dev-dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "stable", features = ["debug"] }
gtest = { git = "https://github.com/gear-tech/gear.git", branch = "stable" }