[package]
name = "escrow-meta-io"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "stable" }
gmeta = { git = "https://github.com/gear-tech/gear.git", branch = "master", features = ["codegen"] }
primitive-types = { version = "0.12.1", default-features = false, features = ["scale-info"] }
escrow-io = { path = "../io" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", branch = "master" }